Fix milestone API